--- a/index.html
+++ b/index.html
@@ -1,26 +1,167 @@
-<script>
-    // Show popup when button clicked
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Sheriff Eligibility Quiz</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      background: #f5f6fa;
+      margin: 0;
+      padding: 0;
+    }
+
+    #open-quiz-btn {
+      display: block;
+      margin: 100px auto;
+      padding: 15px 25px;
+      font-size: 18px;
+      cursor: pointer;
+      background: #2c3e50;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+    }
+
+    /* Modal */
+    #quiz-modal {
+      display: none;
+      position: fixed;
+      z-index: 999;
+      top: 0; left: 0;
+      width: 100%; height: 100%;
+      background: rgba(0,0,0,0.6);
+      justify-content: center;
+      align-items: center;
+    }
+
+    .quiz-wrapper {
+      background: #fff;
+      padding: 20px;
+      border-radius: 8px;
+      width: 90%;
+      max-width: 600px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.3);
+    }
+
+    h1, h2 {
+      text-align: center;
+    }
+
+    .question-block {
+      margin: 15px 0;
+    }
+
+    .question {
+      font-weight: bold;
+    }
+
+    label {
+      display: block;
+      margin: 5px 0;
+      cursor: pointer;
+    }
+
+    #submit-btn {
+      display: block;
+      margin: 20px auto;
+      padding: 10px 20px;
+      font-size: 16px;
+      background: #1f3a93;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    #close-btn {
+      padding: 10px 20px;
+      font-size: 16px;
+      cursor: pointer;
+      background: #c0392b;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+    }
+  </style>
+</head>
+<body>
+
+  <!-- Button -->
+  <button id="open-quiz-btn">Take Sheriff Eligibility Quiz</button>
+
+  <!-- Modal -->
+  <div id="quiz-modal">
+    <div class="quiz-wrapper">
+      <h1>Sheriff Eligibility Quiz</h1>
+
+      <form id="sheriff-quiz">
+        <div class="question-block">
+          <p class="question">Question 1: How old are you?</p>
+          <label><input type="radio" name="age" value="18"> At least 18</label>
+          <label><input type="radio" name="age" value="21"> At least 21</label>
+          <label><input type="radio" name="age" value="25"> At least 25</label>
+        </div>
+
+        <div class="question-block">
+          <p class="question">Question 2: Would you relocate for a job if required?</p>
+          <label><input type="radio" name="relocate" value="yes"> Yes</label>
+          <label><input type="radio" name="relocate" value="no"> No</label>
+        </div>
+
+        <div class="question-block">
+          <p class="question">Question 3: Do you have a high school diploma or equivalent?</p>
+          <label><input type="radio" name="diploma" value="yes"> Yes</label>
+          <label><input type="radio" name="diploma" value="no"> No</label>
+        </div>
+
+        <div class="question-block">
+          <p class="question">Question 4: Are you a U.S. citizen?</p>
+          <label><input type="radio" name="citizen" value="yes"> Yes</label>
+          <label><input type="radio" name="citizen" value="no"> No</label>
+        </div>
+
+        <div class="question-block">
+          <p class="question">Question 5: Have you ever been convicted of a felony?</p>
+          <label><input type="radio" name="felony" value="yes"> Yes</label>
+          <label><input type="radio" name="felony" value="no"> No</label>
+        </div>
+
+        <div class="question-block">
+          <p class="question">Question 6: Would you be willing to complete basic training?</p>
+          <label><input type="radio" name="training" value="yes"> Yes</label>
+          <label><input type="radio" name="training" value="no"> No</label>
+        </div>
+
+        <div class="question-block">
+          <p class="question">Question 7: Do you have a valid driver’s license?</p>
+          <label><input type="radio" name="license" value="yes"> Yes</label>
+          <label><input type="radio" name="license" value="no"> No</label>
+        </div>
+
+        <button type="button" id="submit-btn">Submit</button>
+      </form>
+    </div>
+  </div>
+
+  <script>
     const modal = document.getElementById('quiz-modal');
-    document.getElementById('open-quiz-btn').addEventListener('click', () => {
+    const openBtn = document.getElementById('open-quiz-btn');
+    const quizWrapper = document.querySelector('.quiz-wrapper');
+    const submitBtn = document.getElementById('submit-btn');
+
+    // Open modal
+    openBtn.addEventListener('click', () => {
       modal.style.display = 'flex';
     });
-  
-    // State requirements
+
+    // Requirements for each state (shortened for demo – add all 50 later)
     const requirements = {
       "Alabama": { age:25, relocate:true, diploma:true, citizen:true, felony:false, training:true },
       "Alaska": { age:21, relocate:true, diploma:true, citizen:true, felony:false, training:true },
-      "Arizona": { age:18, relocate:true, diploma:true, citizen:true, felony:false, training:true },
-      "Arkansas": { age:21, relocate:true, diploma:true, citizen:true, felony:false, training:true },
-      "California": { age:18, relocate:true, diploma:true, citizen:true, felony:false, training:true },
-      "Colorado": { age:18, relocate:true, diploma:true, citizen:true, felony:false, training:true },
-      "Connecticut": { age:18, diploma:true, citizen:true, felony:false, training:true },
-      // ... (keep all other states here)
-      "Wyoming": { age:18, relocate:true, diploma:true, citizen:true, felony:false }
+      "Arizona": { age:18, relocate:true, diploma:true, citizen:true, felony:false, training:true }
     };
-  
-    const submitBtn = document.getElementById('submit-btn');
-    const quizWrapper = document.querySelector('.quiz-wrapper');
-  
+
     submitBtn.addEventListener('click', () => {
       const ageValue = parseInt(document.querySelector('input[name="age"]:checked')?.value || 0);
       const relocateValue = document.querySelector('input[name="relocate"]:checked')?.value === "yes";
@@ -28,7 +169,7 @@
       const citizenValue = document.querySelector('input[name="citizen"]:checked')?.value === "yes";
       const felonyValue = document.querySelector('input[name="felony"]:checked')?.value === "yes";
       const trainingValue = document.querySelector('input[name="training"]:checked')?.value === "yes";
-  
+
       const qualifiedStates = [];
       for (const state in requirements) {
         const req = requirements[state];
@@ -43,23 +184,20 @@
           qualifiedStates.push(state);
         }
       }
-  
-      // Replace quiz content with results
+
+      // Replace quiz with results
       quizWrapper.innerHTML = `
-        <h1 style="text-align:center;">Congratulations!</h1>
-        <p style="text-align:center;">You are eligible in the following states:</p>
-        <ul style="text-align:left; max-width:400px; margin:1rem auto;">
-          ${qualifiedStates.map(s => `<li>${s}</li>`).join('')}
-        </ul>
-        <div style="text-align:center; margin-top:1rem;">
-          <button id="close-btn" style="padding:0.5rem 1rem; font-size:1rem; cursor:pointer; background:#1f3a93; color:#fff; border:none; border-radius:6px;">Close</button>
-        </div>
+        <h2>Results</h2>
+        <p>You are eligible in the following states:</p>
+        <ul>${qualifiedStates.map(s => `<li>${s}</li>`).join('')}</ul>
+        <button id="close-btn">Close</button>
       `;
-  
+
       document.getElementById('close-btn').addEventListener('click', () => {
         modal.style.display = 'none';
-        location.reload(); // reset quiz if needed
+        location.reload(); // reset
       });
     });
   </script>
-  
+</body>
+</html>
